@@ -45,6 +45,8 @@ dpkg (1.16.4) UNRELEASED; urgency=low
   * Clarify also in the dpkg(1) man page (already present in the dpkg.cfg(5)
     man page) the valid filenames for /etc/dpkg/dpkg.cfg.d/ fragment files.
     Closes: #674674
+  * Fix start-stop-daemon to not follow symlinks when creating pidfiles.
+    Thanks to Carsten Hey <carsten@debian.org>. Closes: #675918
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
